sistemati bug eventi, modificato modo notify con lambda, aggiunti food iniziali